# C-eleste

./: CMakeLists.txt  README.md  compile.sh
data/: levels.txt
include/: .game.h.swp  celeste.h  cell.h  container.h  game.h  iara.h  maze.h  maze_reader.h  snake.h  status_board.h
src/: .game.cpp.swp  celeste.cpp  cell.cpp  drive.cpp  game.cpp  iara.cpp  maze.cpp  maze_reader.cpp  snake.cpp
